adjust reading date
